# BayesianDecisionTheoryAsymmetricCost

./: README.md  pyproject.toml
docs/: document.aux  document.blg  document.out  document.tex  document.toc
docs/MedianDecisionRule/: document.aux  document.bbl  document.tex  ref.bib
docs/SequentialDecisionMaking/: document.aux  document.bbl  document.blg  document.hst  document.out  document.tex  document.toc  document.ver  ref.bib
docs/SequentialDecisionMaking/chapters/: app_analytical_per.tex  app_deriv.tex  app_deriv2.tex  app_expected_cost.tex  app_notes.tex  app_poisson.tex  conclusion.tex  framework.tex  introduction.tex  optimal_policy.tex  overview.tex  trashed.tex
docs/SequentialDecisionMaking/chapters/trashed/: app_deriv3.tex  trashed.tex
docs/SequentialDecisionMaking/figures/: vehicle_timeline.tex
src/: numerical_example.py
src/MedianDecisionRule/: plots.py
src/SequentialDecisionMaking/: check_calculations.py  costs_baseline.pkl  costs_by_hand.pkl  decision_theory_discounted_cost_version2.py  decision_theory_example.py  example.py  generate_heat_map_plot.py  minimizing_expected_cost_first_cost_function.py  minimizing_expected_cost_sorcerer.py  per_computation.py  per_computation_rR.py  per_debug.py  percentile_check.py  poisson_approximation.py  tendencies.py  test_gamma_approximations.py  true_costs_first_cost_function.py  true_costs_first_cost_function_parallel.py
src/SequentialDecisionMaking/trashed/: decision_theory_discounted_cost.py  minimizing_expected_cost.py
